# yoshida-lab-cap

./: .gitignore  CMakeLists.txt  CompilerOptions.cmake  README.md  axis.cpp  axis.hpp  cam_opts.cfg  main.cpp  rec.cpp  rec.hpp
cogdevcam/: main.cpp
cogdevcam/include/: audio.h  cogdevcam.h  imagegui.h  options.h  tools.h  video.h
cogdevcam/src/: main.cpp
cogdevcam/tests/: test_audio.cpp  test_video.cpp
lib/: rtaudio_static.lib
tools/: check_ts.R  cmake_cmd.sh
tools/build_dep/linux/: install_boost.sh  install_opencv.sh  install_rtaudio.sh
tools/build_dep/windows/: build_dependencies.bat
tools/build_dep/windows/bat_tools/: _path_search.bat  buildvars.bat  checkdir.bat  downloadpkg.bat  fileparts.bat  unzipper.bat
